--- a/OldDriverManagerV2/Razor/Library.razor
+++ b/OldDriverManagerV2/Razor/Library.razor
@@ -1,10 +1,10 @@
-﻿<MudMainContent>
+﻿<MudMainContent Style="overflow-x:hidden">
     @if (!show_movie_info)
     {
         <div class="d-flex flex-column align-center mx-8 py-4">
             <MudContainer MaxWidth="MaxWidth.Small" Class="d-flex d-row align-center">
-                <MudTextField T="string" Value="@search_text" DebounceInterval="250" OnDebounceIntervalElapsed="OnDebounceIntervalElapsed" Label="Search" Variant="Variant.Outlined" Adornment="Adornment.End" AdornmentIcon="@Icons.Material.Filled.Search" Clearable="true" />
-                @if (Settings.Default.SortFlag == 1) {
+                <MudTextField T="string" Value="@search_text" DebounceInterval="500" OnDebounceIntervalElapsed="OnDebounceIntervalElapsed" Label="Search" Variant="Variant.Outlined" Adornment="Adornment.End" AdornmentIcon="@Icons.Material.Filled.Search" Clearable="true" />
+                @if (Settings.Default.SortFlag == 2) {
                     <MudFab Class="ml-8" Size="Size.Medium" DisableElevation="true" StartIcon="@Icons.Material.Filled.Refresh" OnClick="@((e)=>OnRefreshClicked())" />
                 }
 
@@ -12,6 +12,7 @@
             @switch (Settings.Default.SortFlag)
             {
                 case 0:
+                case 1:
                     <MudGrid Justify="Justify.Center" Class="py-8">
                     @for (int _i = 0; _i < item_num; _i++)
                     {
@@ -25,7 +26,7 @@
                     </MudGrid>
                     <MudPagination Selected="@current_page_index" Class="py-4" Count="@page_num" SelectedChanged="@OnPageChanged" />
                     break;
-                case 1:
+                case 2:
                     <MudGrid>
                         <MudItem xs="12" sm="6">
                             @if (MovieListHandler.movies.Count > 0)
@@ -64,8 +65,10 @@
 
 @using OldDriverManagerV2.Util
 @using Microsoft.JSInterop
+@using System.Threading
 @inject IJSRuntime JSRuntime
 @inject ISnackbar Snackbar
+@inject IDialogService DialogService
 
 @code {
     private bool show_movie_info = false;
@@ -73,14 +76,12 @@
     private int current_page_index = 1;
     private int item_num = 0;
     private string search_text = "";
-    private int selected_movie_index;
     private OldDriverManagerV2.Data.Movie? selected_movie;
     private OldDriverManagerV2.Data.Movie? main_movie;
 
     protected override async Task OnInitializedAsync()
     {
         await Init();
-        RefreshPage();
     }
 
     private void InitSnackbar()
@@ -93,6 +94,7 @@
         Snackbar.Configuration.PreventDuplicates = true;
     }
 
+    // 改变搜索文本
     private async void OnDebounceIntervalElapsed(string debouncedText)
     {
         search_text = debouncedText;
@@ -102,6 +104,7 @@
         RefreshPage();
     }
 
+    // 点击页码
     private async void OnPageChanged(int i)
     {
         if (current_page_index == i) return;
@@ -111,6 +114,7 @@
         RefreshPage();
     }
 
+    // 点击刷新
     private async void OnRefreshClicked()
     {
         //await LocalImageLoader.RevokeAll();
@@ -118,6 +122,7 @@
         RefreshPage();
     }
 
+    // 点击详情
     private async void OnInfoClicked(OldDriverManagerV2.Data.Movie movie)
     {
         selected_movie = movie;
@@ -126,33 +131,35 @@
         StateHasChanged();
     }
 
+    // 点击后退
     private async void OnBackClicked()
     {
         show_movie_info = false;
         await JSRuntime.InvokeVoidAsync("scrollToTop");
-        RefreshPage();
+        //RefreshPage();
+        StateHasChanged();
     }
 
+    // 初始化
     private async Task Init()
     {
-        System.Diagnostics.Debug.WriteLine("Library init!");
+        System.Diagnostics.Debug.WriteLine("Library Initialization");
         InitSnackbar();
         await MovieListHandler.GetAllMovies();
         await MovieListHandler.FilterMovies("");
         await MovieListHandler.SortMovies();
         LocalImageLoader.Init(JSRuntime);
+        RefreshPage();
     }
 
+    // 刷新页面
     private void RefreshPage()
     {
-        System.Diagnostics.Debug.WriteLine("Library refresh!");
-
+        System.Diagnostics.Debug.WriteLine("Library Refresh");
         page_num = MovieListHandler.movies.Count > 0 ? (int)Math.Ceiling((double)MovieListHandler.movies.Count / Settings.Default.NumOfItems) : 1;
         item_num = (current_page_index != page_num) ? Settings.Default.NumOfItems : (MovieListHandler.movies.Count % Settings.Default.NumOfItems);
         if (MovieListHandler.movies.Count > 0 && item_num == 0) item_num = Settings.Default.NumOfItems;
-
         main_movie = MovieListHandler.movies.Count > 0 ? MovieListHandler.movies[0] : null;
-
         StateHasChanged();
     }
 
