--- a/OldDriverManagerV2/Razor/Movie.razor
+++ b/OldDriverManagerV2/Razor/Movie.razor
@@ -40,9 +40,14 @@
                 }
             }
             <MudDivider Class="my-4" />
-            <MudButton Class="mb-2" Variant="Variant.Filled" Color="Color.Primary" StartIcon="@Icons.Material.Filled.PlayArrow" OnClick="@((e)=>OnPlayClicked(movie.file))">播放</MudButton>
-            <MudButton Class="mb-2" Variant="Variant.Filled" Color="Color.Primary" StartIcon="@Icons.Material.Filled.DriveFileMove" OnClick="@((e)=>OnOpenPathClicked(movie.file))">打开文件所在路径</MudButton>
+            <MudButton Class="mb-2" Variant="Variant.Filled" Color="Color.Primary" StartIcon="@Icons.Material.Filled.PlayArrow" OnClick="@((e)=>OnPlayClicked(movie))">播放</MudButton>
+            <MudButton Class="mb-2" Variant="Variant.Filled" Color="Color.Primary" StartIcon="@Icons.Material.Filled.DriveFileMove" OnClick="@((e)=>OnOpenPathClicked(movie))">打开文件所在路径</MudButton>
             <MudButton Class="mb-2" Variant="Variant.Filled" Color="Color.Primary" StartIcon="@Icons.Material.Filled.EditNote" OnClick="@((e)=>OnOpenNFOClicked(movie.nfo))">打开属性文件所在路径</MudButton>
+            <style>
+                .my-dialog-class {
+                    backdrop-filter: blur(10px);
+                }
+            </style>
 
         }
     </MudPaper>
@@ -51,6 +56,7 @@
 
 @using OldDriverManagerV2.Util
 @inject ISnackbar Snackbar
+@inject IDialogService DialogService
 @implements IAsyncDisposable
 
 @code {
@@ -75,7 +81,7 @@
 
     private void Init()
     {
-        System.Diagnostics.Debug.WriteLine("Movie init!");
+        System.Diagnostics.Debug.WriteLine("Movie Initialization");
         InitSnackbar();
     }
 
@@ -89,6 +95,7 @@
         Snackbar.Configuration.PreventDuplicates = true;
     }
 
+    // 点击复制
     private void OnCopyClicked(string tag)
     {
         try
@@ -102,21 +109,46 @@
         }
     }
 
-    private void OnPlayClicked(string path)
+    // 点击播放
+    private void OnPlayClicked(OldDriverManagerV2.Data.Movie movieToBePlayed)
     {
-        bool flag = MovieListHandler.PlayMovie(path);
-        if (!flag) Snackbar.Add("文件不存在", Severity.Error, config => { config.HideIcon = true; });
+        if (movieToBePlayed.files.Count > 1)
+        {
+            var options = new DialogOptions { ClassBackground = "my-dialog-class" };
+            var parameters = new DialogParameters<FileSelection>();
+            parameters.Add(x => x.files, movieToBePlayed.files);
+            parameters.Add(x => x.isToPlay, true);
+            DialogService.Show<FileSelection>("文件选择", parameters, options);
+        }
+        else
+        {
+            bool flag = MovieListHandler.PlayMovie(movieToBePlayed.files[0]);
+            if (!flag) Snackbar.Add("文件不存在", Severity.Error, config => { config.HideIcon = true; });
+        }
     }
 
-    private void OnOpenPathClicked(string path)
+    // 点击打开文件路径
+    private void OnOpenPathClicked(OldDriverManagerV2.Data.Movie movieToBeOpened)
     {
-        bool flag = MovieListHandler.OpenPathOfMovie(path);
-        if (!flag) Snackbar.Add("文件不存在", Severity.Error, config => { config.HideIcon = true; });
+        if (movieToBeOpened.files.Count > 1)
+        {
+            var options = new DialogOptions { ClassBackground = "my-dialog-class" };
+            var parameters = new DialogParameters<FileSelection>();
+            parameters.Add(x => x.files, movieToBeOpened.files);
+            parameters.Add(x => x.isToPlay, false);
+            DialogService.Show<FileSelection>("文件选择", parameters, options);
+        }
+        else
+        {
+            bool flag = MovieListHandler.OpenPath(movieToBeOpened.files[0]);
+            if (!flag) Snackbar.Add("文件不存在", Severity.Error, config => { config.HideIcon = true; });
+        }
     }
 
+    // 点击打开 NFO 文件路径
     private void OnOpenNFOClicked(string path)
     {
-        bool flag = MovieListHandler.OpenPathOfFile(path);
+        bool flag = MovieListHandler.OpenPath(path);
         if (!flag) Snackbar.Add("文件不存在", Severity.Error, config => { config.HideIcon = true; });
     }
 
