--- a/OldDriverManagerV2/Razor/Credit.razor
+++ b/OldDriverManagerV2/Razor/Credit.razor
@@ -11,7 +11,7 @@
         </MudContainer>
     </DialogContent>
     <DialogActions>
-        <MudButton Color="Color.Primary" OnClick="Ok">好的</MudButton>
+        <MudButton OnClick="Ok">好的</MudButton>
     </DialogActions>
 </MudDialog>
 
