--- a/OldDriverManagerV2/Razor/FileSelection.razor
+++ b/OldDriverManagerV2/Razor/FileSelection.razor
@@ -20,7 +20,7 @@
         </div>
     </DialogContent>
     <DialogActions>
-        <MudButton Color="Color.Primary" OnClick="Close">完成</MudButton>
+        <MudButton OnClick="Close">完成</MudButton>
     </DialogActions>
 </MudDialog>
 
