--- a/OldDriverManagerV2/Razor/Main.razor
+++ b/OldDriverManagerV2/Razor/Main.razor
@@ -1,4 +1,4 @@
-﻿<MudThemeProvider Theme="MyCustomTheme" />
+﻿<MudThemeProvider Theme="MyCustomTheme" @bind-IsDarkMode="@Settings.Default.DarkMode" />
 <MudDialogProvider />
 <MudSnackbarProvider />
 
@@ -6,14 +6,14 @@
     <MudAppBar Dense=true>
         <MudIconButton Icon="@Icons.Material.Filled.Menu"Edge="Edge.Start" OnClick="@((e) => DrawerToggle())" />
     </MudAppBar>
-    <MudDrawer @bind-Open="@drawer_open" Variant="DrawerVariant.Persistent" Color="Color.Primary">
+    <MudDrawer @bind-Open="@drawer_open" Variant="DrawerVariant.Persistent">
         <MudDrawerHeader>
             <MudText Typo="Typo.h6">安全驾驶</MudText>
         </MudDrawerHeader>
-        <MudNavLink IconColor="Color.Inherit" Icon="@Icons.Material.Filled.SpaceDashboard" OnClick="@((e) => OpenPage(Page.Library))">库</MudNavLink>
-        <MudNavLink IconColor="Color.Inherit" Icon="@Icons.Material.Filled.Settings" OnClick="@((e) => OpenPage(Page.Setting))">设置</MudNavLink>
+        <MudNavLink Icon="@Icons.Material.Filled.SpaceDashboard" OnClick="@((e) => OpenPage(Page.Library))">库</MudNavLink>
+        <MudNavLink Icon="@Icons.Material.Filled.Settings" OnClick="@((e) => OpenPage(Page.Setting))">设置</MudNavLink>
         <MudSpacer />
-        <MudNavLink IconColor="Color.Inherit" Icon="@Icons.Material.Filled.Info" OnClick="@((e) => OpenCreditDialog())">关于</MudNavLink>
+        <MudNavLink Icon="@Icons.Material.Filled.Info" OnClick="@((e) => OpenCreditDialog())">关于</MudNavLink>
         <style>
             .my-credit-class {
                 backdrop-filter: blur(10px);
@@ -68,12 +68,15 @@
     }
 
     MudTheme MyCustomTheme = new MudTheme()
-    {
-        Palette = new PaletteLight()
         {
-            Primary = Colors.Grey.Darken3,
-            Secondary = Colors.Grey.Darken2,
-            AppbarBackground = Colors.Shades.White
+            Palette = new PaletteLight()
+            {
+                Primary = Colors.Grey.Darken1,
+                AppbarBackground = Colors.Grey.Lighten4
+            },
+            PaletteDark = new PaletteDark()
+            {
+                Primary = Colors.Grey.Lighten1
         }
     };
 }
